--- a/Prior_Work.tex
+++ b/Prior_Work.tex
@@ -1,12 +1,16 @@
 \chapter{Prior Work}
 
+\section{Development of the Unscented Kalman Filter}
+
 In \cite{Julier1997}, Simon Julier and Jeffrey Uhlmann discuss the development and demonstration of a new nonlinear estimator for the Kalman Filter. Recognizing that most applications for autonomous navigation are fundamentally nonlinear in both their dynamics and their observation models, Julier and Uhlmann proposed the use of a set of discretely sampled ``sigma points'' to determine the mean and covariance of a probability distribution. By recasting the prediction and correction steps of the Kalman filter in the form of unscented transforms (UTs), this new filter eliminates the need to calculate Jacobian matrices. Julier and Uhlmann argued that for this reason their formulation was easier to implement than the Extended Kalman Filter (EKF) and went on to suggest that its use could supplant the EKF in virtually all applications, linear or nonlinear.
 
-In \cite{Julier1998}, Julier acknowledges that the (linear) Kalman Filter has been used successfully in many nonlinear scenarios, but points out that the use of only the first two moments of the state estimate sigma points results in neglect of all higher order information (that is, third-order moments, or ``skew''), a potentially rich source of new and useful information relating to symmetry of the state estimate. By extending the sigma point selection scheme of the conventional unscented transform, Julier was able to present a tractable but computationally complex extension of the Kalman filter that could predict not only the first two moments of a sigma point distribution, but also the third moment (the so-called ``skew''). Though formulated initially for unimodal distributions, Julier stated that the approach could, with additional mathematical considerations, be generalized for use with multimodal distributions. Julier's contention was that use of higher order information could promote better performance levels in autonomous vehicle navigation. The utility of maintaining and utilizing higher order information through the use of skewed filtering was assessed by the authors in a realistic tracking scenario. However, the results turned out to be somewhat disappointing as the change in performance turned out to be minimal, presumably due to the linearity of the filter's update rule. Accordingly, research in this area continues, including examination of the use of nonlinear update rules in the filtering process.
+In \cite{Julier1998}, Julier acknowledges that the (linear) Kalman Filter has been used successfully in many nonlinear scenarios, but points out that the use of only the first two moments of the state estimate sigma points results in neglect of all higher order information (that is, third-order moments, or ``skew''), a potentially rich source of new and useful information relating to symmetry of the state estimate. By extending the sigma point selection scheme of the conventional unscented transform, Julier was able to present a tractable but computationally complex extension of the Kalman filter that could predict not only the first two moments of a sigma point distribution, but also the skew. Though formulated initially for unimodal distributions, Julier stated that the approach could, with additional mathematical considerations, be generalized for use with multimodal distributions. Julier's contention was that use of higher order information could promote better performance levels in autonomous vehicle navigation. The utility of maintaining and utilizing higher order information through the use of skewed filtering was assessed by the authors in a realistic tracking scenario. However, the results turned out to be somewhat disappointing as the change in performance turned out to be minimal, presumably due to the linearity of the filter's update rule. Accordingly, research in this area continues, including examination of the use of nonlinear update rules in the filtering process.
 
-In [Julier 2002] Simon Julier describes a novel approach to modifying the “unscented transformation” (UT) state estimation method, a subject of one of his previous studies in collaboration with Jeffrey Uhlmann. In the current paper, however, Julier takes the additional step of introducing a new framework for scaling sigma points as part of the state estimation process. The general framework of the new methodology allows preservation of the first two moments of any set of sigma points, thus providing a construct for limiting values to either the conventional unscented transform or the modified (scaled) transform. Providing detailed mathematical validations, the author shows that the new scaling algorithm is computationally manageable in that it is, in essence, little more than the conventional unscented transformation algorithm with the addition of a simple post-processing step, the only difference being the inclusion of an extra correction term. Thus, the new algorithm's computational and storage costs are similar to that of the non-scaled transformation. The performance level of the scaled UT is thus demonstrably superior when the conventional non-scaled UT is used for propagating the two lower-order moments of a sigma point distribution.
+In \cite{Julier2002}, Julier describes a novel approach to modifying the unscented transformation state estimation method, a subject of one of his previous studies in collaboration with Uhlmann. In the current paper, however, Julier takes the additional step of introducing a new framework for scaling sigma points as part of the state estimation process. The general framework of the new methodology allows preservation of the first two moments of any set of sigma points, thus providing a construct for limiting values to either the conventional unscented transform or the modified (scaled) transform. Providing detailed mathematical validations, the author shows that the new scaling algorithm is computationally manageable in that it is, in essence, little more than the conventional unscented transformation algorithm with the addition of a simple post-processing step, the only difference being the inclusion of an extra correction term. Thus, the new algorithm's computational and storage costs are similar to that of the non-scaled transformation. The performance level of the scaled UT is thus demonstrably superior when the conventional non-scaled UT is used for propagating the two lower-order moments of a sigma point distribution.
 
-[Julier 2004] Julier and Uhlmann discuss the application of the extended Kalman filter (EKF) as an estimation algorithm and the associated difficulties. The EKF contains inherent problems and works best with linear systems. These limitations led to the development of the unscented transformation (UT) for nonlinear applications. In this paper, Julier and Uhlmann describe the unscented transformation (UT) and its benefits including easier implementation and improved accuracy. The UT offers greater accuracy and reliability by applying higher order information using sigma points to the traditional mean and covariance information associated with linear applications. The authors provide examples, which may be tailored, that show how UT overcomes the limitations of the EKF.
+In \cite{Julier2004} Julier and Uhlmann discuss the application of the extended Kalman filter (EKF) as an estimation algorithm and the associated difficulties. Because the EKF is fundamentally a linearizing approach to estimation, its effectiveness is thus tied to the veracity of the local linearity assumption for the system under scrutiny. These limitations led to the development of the unscented transformation (UT) for nonlinear applications. In this paper, Julier and Uhlmann describe the unscented transformation (UT) and its benefits, including easier implementation and improved accuracy. The UT offers greater accuracy and reliability by applying higher order information using sigma points to the traditional mean and covariance information associated with linear applications. The authors provide examples, which may be tailored, that show how the UT overcomes the limitations of the EKF.
+
+\section{Kalman Filtering for Robotic Navigation and State Estimation}
 
 [Mourikis 2007] Mourikis et al. expand investigation of the familiar topic of Vision-aided Inertial Navigation, with particular emphasis on small, low-cost, low-weight systems, including unmanned aerial vehicles (UAVs) using a monocular camera. Because technical advances have been made in the manufacture of inertial sensors, these robotic systems are capable of producing high precision state estimations even in uncontrolled urban environments, without utilizing a 3D feature position in the filter state vector of the Extended Kalman Filter. The exceptional accuracy produced in this real-time, real-world pose estimation model is highly desirable because it produces images that are rich in high-dimensional measurements. This robustness, however, invariably comes at a cost of computational complexity in the EKF-based algorithm, a trade-off that is unavoidable in the present state-of-the-art for vision-aided inertial navigation systems.
 
